--- a/contacte.html
+++ b/contacte.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tribute Page</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="contacte.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
     <script src="https://use.fontawesome.com/f13ac37978.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -45,7 +45,7 @@
                 <li><a href="#" target="_blank"><h3>PROJECTS</h3></a></li>
                 <li><a href="#" target="_blank"><h3>ABOUT</h3></a></li>
                 <li><a href="#" target="_blank"><h3>CONTACT</h3></a></li>
-                <li><a href="contacte.html" target="_blank"><h3>CONTACTS</h3></a></li>
+                <li><a href="#" target="_blank"><h3>CONTACTS</h3></a></li>
             </ul>
         </nav>
         <div class="content">
@@ -77,29 +77,36 @@
                 </div>
             </div>
             <div class="right-content">
-                <div class="main-text">
-                    <h3>Homework</h3>
-                    <p>Write some info about you. Make this web site as you wish. Change/Add any attributes you have learned in this example. Add/edit elements in HTML page as you wish, to create custom components in your page.</p>
-                    <h3>Exercises</h3>
-                    <ol>
-                        <li>Add new widget</li>
-                        <li>Make sure you understand how to find any elements with:</li>
-                        <ul>
-                            <li>document.getElementById('element-id')</li>
-                            <li>document.getElementsByClassName("class-name")</li>
-                            <li>document.getElementsByTagName("a")</li>
-                            <li>and nested combinations of those</li>
-                        </ul>
-                        <li>play in FireBug to find and change some attributes (color, display, width, height, etc.) of some elements</li>
-                        <li>Make all widgets collapsible</li>
-                    </ol>
-                </div>
+                <div class="frimituri">HOME: Welcome home!</div>
+                
+                <form action="date/add.php" id="contacte-form">
+                    <input type="hidden" name="id">
+                    <input type="text" name="lastName" placeholder="Nume">
+                    <input type="text" name="firstName" placeholder="Prenume">
+                    <input type="text" name="phone" placeholder="Telefon">
+                    <button id="add-btn" >Add</button>
+                </form>
+                <table id="contacte-list">
+                    <thead>
+                        <tr>
+                            <th>Nume:</th>
+                            <th>Prenume:</th>
+                            <th>Phone:</th>
+                            <th>Actiuni:</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+
+                    </tbody>
+                </table>
+
                 <div style="clear: both"></div>
             </div>
         </div>
     </div>
     <script src="script.js"></script>
     <script src="contacte.js"></script>
+  
 </body>
 
 </html>
